--- a/appoint-web/src/main/web/src/app/login/login.component.html
+++ b/appoint-web/src/main/web/src/app/login/login.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <ng-template #loggedOut>
-  <p-card header="Login" [style]="{width: '360px'}" styleClass="ui-card-shadow login-form" class="login-form">
+  <p-card header="Login" [style]="{width: '360px'}" styleClass="ui-card-shadow">
     <p-header>
         <img src="assets/Images/login.png" height="220px" width="100px">
     </p-header>
