--- a/appoint-web/src/main/web/src/app/app.component.html
+++ b/appoint-web/src/main/web/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Appoint-me</a>
     </div>
-    <ul class="nav navbar-nav" routerLinkActive="active">
+    <ul class="nav navbar-nav" [routerLinkActive]="active">
       <li class="nav-item"><a class="nav-link" routerLink="home">Home</a></li>
       <li *ngIf="authority === 'user'" class="nav-item">
         <a class="nav-link" routerLink="user">User Board</a>
