changed hibernate mapping

--- a/appoint-web/src/main/web/src/app/app.component.html
+++ b/appoint-web/src/main/web/src/app/app.component.html
@@ -14,6 +14,9 @@
       <li *ngIf="authority === 'pm'" class="nav-item">
         <a class="nav-link" routerLink="pm">PM Board</a>
       </li>
+      <li *ngIf="authority === 'profile'" class="nav-item">
+        <a class="nav-link" routerLink="profile">Profile</a>
+      </li>
       <li *ngIf="!authority" class="nav-item">
         <a class="nav-link" routerLink="login">Login</a>
       </li>
