--- a/appoint-web/src/main/web/src/app/login/login.component.html
+++ b/appoint-web/src/main/web/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="isLoggedIn; else loggedOut">
   Logged in as {{roles}}.
 </div>
-
+<p-toast [style]="{marginTop: '80px'}" position="top-center" key="tc" styleClass="custom-toast"></p-toast>
 <ng-template #loggedOut>
   <p-card header="Login" [style]="{width: '360px'}" styleClass="ui-card-shadow">
     <p-header>
@@ -10,11 +10,11 @@
     </p-header>
     <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
         <div class="form-group">
-          <label for="username">Username</label>
-          <input pInputText class="form-control" name="username" [(ngModel)]="form.username" #username="ngModel" placeholder="Username"
+          <label for="phone">Phone</label>
+          <input pInputText class="form-control" name="phone" [(ngModel)]="form.phone" #phone="ngModel" placeholder="Phone"
             required />
-          <div *ngIf="f.submitted && username.invalid" class="error">
-            <div *ngIf="username.errors.required" class="error">Username is required</div>
+          <div *ngIf="f.submitted && phone.invalid" class="error">
+            <div *ngIf="phone.errors.required" class="error">Phone is required</div>
           </div>
         </div>
         <div class="form-group">
@@ -28,9 +28,6 @@
         </div>
         <div class="form-group">
           <button pButton type="submit" label="Login" icon="pi pi-sign-in" class="ui-button-primary"></button>
-          <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger">
-            Login failed: {{errorMessage}}
-          </div>
         </div>
       </form>
       <hr>
