--- a/appoint-web/src/main/web/src/app/register/register.component.html
+++ b/appoint-web/src/main/web/src/app/register/register.component.html
@@ -17,11 +17,11 @@
               </div>
             </div>
           <div class="form-group">
-            <label for="username">Username</label>
-            <input pInputText class="form-control" name="username" [(ngModel)]="form.username" #username="ngModel" placeholder="Username"
+            <label for="phone">Phone</label>
+            <input pInputText class="form-control" name="phone" [(ngModel)]="form.phone" #phone="ngModel" placeholder="Phone"
               required />
-            <div *ngIf="f.submitted && username.invalid" class="error">
-              <div *ngIf="username.errors.required" >Username is required</div>
+            <div *ngIf="f.submitted && phone.invalid" class="error">
+              <div *ngIf="phone.errors.required" >Phone is required</div>
             </div>
           </div>
           <div class="form-group">
