--- a/appoint-web/src/main/web/src/styles.css
+++ b/appoint-web/src/main/web/src/styles.css
@@ -2,6 +2,7 @@
 @import "../node_modules/primeicons/primeicons.css";
 @import "../node_modules/primeng/resources/themes/nova-light/theme.css";
 @import "../node_modules/primeng/resources/primeng.min.css";
+@import "../node_modules/primeflex/primeflex.css";
 
 body {
     background-image: url("assets/Images/Login-backgnd.png");
