--- a/appoint-web/src/main/web/src/app/app.component.html
+++ b/appoint-web/src/main/web/src/app/app.component.html
@@ -1,24 +1,38 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Appoint-me</a>
     </div>
-    <ul class="nav navbar-nav" [routerLinkActive]="active">
-      <li class="nav-item"><a class="nav-link" routerLink="home">Home</a></li>
-      <li *ngIf="authority === 'user'" class="nav-item">
+    <button class="navbar-toggler" type="button" (click)="toggleNavbar()">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <ul class="nav navbar-nav collapse navbar-collapse" [ngClass]="{ 'show': navbarOpen }">
+      <li class=" mr-auto"></li>
+      <li class="nav-item" [routerLinkActive]="['active']"><a class="nav-link" routerLink="home">Home</a></li>
+      <li *ngIf="authority === 'user'" class="nav-item" [routerLinkActive]="['active']">
         <a class="nav-link" routerLink="user">User Board</a>
       </li>
-      <li *ngIf="authority === 'admin'" class="nav-item">
+      <li *ngIf="authority === 'admin'" class="nav-item" [routerLinkActive]="['active']">
         <a class="nav-link" routerLink="admin">Admin Board</a>
       </li>
-      <li *ngIf="authority === 'pm'" class="nav-item">
+      <li *ngIf="authority === 'admin'" class="nav-item" [routerLinkActive]="['active']">
+        <a class="nav-link" routerLink="doctorProfile">Doctor's Calendar</a>
+      </li>
+      <li *ngIf="authority === 'admin'" class="nav-item" [routerLinkActive]="['active']">
+        <a class="nav-link" routerLink="timeOff">Time Off</a>
+      </li>
+      <li *ngIf="authority === 'pm'" class="nav-item" [routerLinkActive]="['active']">
         <a class="nav-link" routerLink="pm">PM Board</a>
       </li>
-      <li *ngIf="authority === 'profile'" class="nav-item">
+      <li *ngIf="authority === 'profile'" class="nav-item" [routerLinkActive]="['active']">
         <a class="nav-link" routerLink="profile">Profile</a>
       </li>
-      <li *ngIf="!authority" class="nav-item">
+      <li *ngIf="!authority" class="nav-item" [routerLinkActive]="['active']">
         <a class="nav-link" routerLink="login">Login</a>
+      </li>
+      <li *ngIf="authority" class="nav-item">
+        <button pButton type="button" (click)="logout()" label="Logout" icon="pi pi-sign-out"
+          class="ui-button-rounded ui-button-danger"></button>
       </li>
     </ul>
   </div>
