--- a/appoint-web/src/main/web/src/styles.css
+++ b/appoint-web/src/main/web/src/styles.css
@@ -3,6 +3,7 @@
 @import "../node_modules/primeng/resources/themes/nova-light/theme.css";
 @import "../node_modules/primeng/resources/primeng.min.css";
 @import "../node_modules/primeflex/primeflex.css";
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 
 body {
     background-image: url("assets/Images/Login-backgnd.png");
@@ -12,3 +13,24 @@ body {
     border-color: #dc3545 !important;
     color: #dc3545 !important;
 }
+
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+    /* background-color: DodgerBlue;*/
+  }
+  
+  .flex-container > div {
+    /* background-color: #f1f1f1; */
+    width: auto;
+    margin: 10px;
+    text-align: center;
+    /* line-height: 75px; */
+    /* font-size: 30px; */
+  }
+
+  .doctor-table {
+    display: flex;
+    justify-content: space-between;
+    /* background-color: DodgerBlue;*/
+  }
