--- a/appoint-web/src/main/web/src/app/profile/profile.component.html
+++ b/appoint-web/src/main/web/src/app/profile/profile.component.html
@@ -1,3 +1,4 @@
+<p-confirmDialog [style]="{width: '50vw'}"></p-confirmDialog>
 <div class="p-grid">
   <div class="p-col" *ngFor="let patient of patientList; let i = index;">
     <p-card header="{{ patient.name }}" subheader="" [style]="{width: '360px'}" styleClass="ui-card-shadow"
