--- a/appoint-web/src/main/web/src/app/patient-appointment/patient-appointment.component.html
+++ b/appoint-web/src/main/web/src/app/patient-appointment/patient-appointment.component.html
@@ -87,7 +87,7 @@
             </div> 
         </div>
         <div class="p-col-5" *ngIf="!timeSlots">
-            No slot available for this hour.
+            Please select a (valid) date.
         </div>
       </div>
       <div class="p-grid">
