--- a/appoint-web/src/main/web/src/styles.css
+++ b/appoint-web/src/main/web/src/styles.css
@@ -34,3 +34,9 @@ body {
     justify-content: space-between;
     /* background-color: DodgerBlue;*/
   }
+
+  @media print {
+    body {
+      display: none;
+    }
+  }
